--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,12 +17,15 @@ set(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")
 set(PACKAGE_BUGREPORT "http://ufo.kit.edu/ufo/newticket")
 
 set(CPACK_GENERATOR "DEB;RPM;")
+set(CPACK_PACKAGE_RELEASE 3)
 set(CPACK_DEBIAN_PACKAGE_NAME "libuca")
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Matthias Vogelgesang <matthias.vogelgesang@kit.edu>")
 set(CPACK_DEBIAN_PACKAGE_DESCRIPTION ${UCA_DESCRIPTION})
 set(CPACK_DEBIAN_PACKAGE_DESCRIPTION_SUMMARY ${UCA_DESCRIPTION})
 
 set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
+
+SET(UCA_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})
 
 add_subdirectory(src)
 add_subdirectory(test)
