--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,7 +16,6 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/control.glade ${CMAKE_CURRENT_BINARY_
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/run.py ${CMAKE_CURRENT_BINARY_DIR})
 
 # --- Build targets -----------------------------------------------------------
-
 include_directories(
     ${GLIB2_INCLUDE_DIRS}
     ${GOBJECT2_INCLUDE_DIRS}
@@ -27,16 +26,16 @@ include_directories(
 message("${CMAKE_CURRENT_SOURCE_DIR}")
 
 if (HAVE_PYLON_CAMERA)
-  set(GENICAM_ROOT $ENV{PYLON_ROOT}/genicam)
-  # check for 32/64 bit
-  if (CMAKE_SIZEOF_VOID_P EQUAL 8)
-    set(PYLON_LIB_DIRS $ENV{PYLON_ROOT}/lib64 $ENV{PYLON_ROOT}/bin ${GENICAM_ROOT}/bin/Linux64_x64
-      ${GENICAM_ROOT}/bin/Linux64_x64/GenApi/Generic)
-  else()
-    set(PYLON_LIB_DIRS $ENV{PYLON_ROOT}/lib64 $ENV{PYLON_ROOT}/bin ${GENICAM_ROOT}/bin/Linux32_i86
-      ${GENICAM_ROOT}/bin/Linux32_i86/GenApi/Generic)
-  endif()
-  link_directories(${PYLON_LIB_DIRS} ${LIBPYLONCAM_LIBDIR})
+    set(GENICAM_ROOT $ENV{PYLON_ROOT}/genicam)
+    # check for 32/64 bit
+    if (CMAKE_SIZEOF_VOID_P EQUAL 8)
+        set(PYLON_LIB_DIRS $ENV{PYLON_ROOT}/lib64 $ENV{PYLON_ROOT}/bin ${GENICAM_ROOT}/bin/Linux64_x64
+            ${GENICAM_ROOT}/bin/Linux64_x64/GenApi/Generic)
+    else()
+        set(PYLON_LIB_DIRS $ENV{PYLON_ROOT}/lib64 $ENV{PYLON_ROOT}/bin ${GENICAM_ROOT}/bin/Linux32_i86
+            ${GENICAM_ROOT}/bin/Linux32_i86/GenApi/Generic)
+    endif()
+    link_directories(${PYLON_LIB_DIRS} ${LIBPYLONCAM_LIBDIR})
 endif()
 
 add_executable(grab grab.c)
@@ -51,7 +50,7 @@ add_executable(grab_pylon grab_pylon.c)
 target_link_libraries(grab_pylon uca ${GLIB2_LIBRARIES} ${GOBJECT2_LIBRARIES})
 
 if (NOT DEFINED WITH_CONTROL_GUI)
-  set(WITH_CONTROL_GUI TRUE)
+    set(WITH_CONTROL_GUI TRUE)
 endif()
 
 if (GTK2_FOUND AND WITH_CONTROL_GUI)
@@ -74,8 +73,14 @@ endif()
 
 if (HAVE_MOCK_CAMERA)
     add_executable(test-mock test-mock.c)
-    target_link_libraries(test-mock uca
-        ${GLIB2_LIBRARIES} ${GOBJECT2_LIBRARIES})
+
+    target_link_libraries(test-mock
+        uca
+        ${GLIB2_LIBRARIES}
+        ${GOBJECT2_LIBRARIES})
+
+    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/gtester.xsl
+        ${CMAKE_CURRENT_BINARY_DIR}/gtester.xsl)
 endif()
 
 add_executable(test-all test-all.c)
