Use a more legible style sheet

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,5 +1,5 @@
 PANDOC=$(shell which pandoc)
-OPTS=-s --smart
+OPTS=-s --smart --toc
 
 all: pdf html
 
@@ -11,10 +11,10 @@ clean:
 	rm -f manual.pdf manual.html
 
 manual.pdf: manual.md
-	$(PANDOC) manual.md -o manual.pdf
+	$(PANDOC) $(OPTS) manual.md -o manual.pdf
 
-manual.html: manual.md
-	$(PANDOC) $(OPTS) manual.md -o manual.html
+manual.html: manual.md style.css
+	$(PANDOC) $(OPTS) manual.md -H webfonts.html -c style.css -o manual.html
 
 ifeq ($(PANDOC),)
 	$(warning Pandoc not found!)
