Add change log to manual

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -11,10 +11,10 @@ clean:
 	rm -f manual.pdf manual.html
 
 manual.pdf: manual.md
-	$(PANDOC) $(OPTS) manual.md -o manual.pdf
+	$(PANDOC) $(OPTS) manual.md z-changes-*.md -o manual.pdf
 
 manual.html: manual.md style.css
-	$(PANDOC) $(OPTS) manual.md -H webfonts.html -c style.css -o manual.html
+	$(PANDOC) $(OPTS) manual.md z-changes-*.md -H webfonts.html -c style.css -o manual.html
 
 ifeq ($(PANDOC),)
 	$(warning Pandoc not found!)
