Fix version stuff for rpm packaging.

--- a/libuca.spec.in
+++ b/libuca.spec.in
@@ -62,8 +62,8 @@ mv "@UCA_BUILD_DIR@/_CPack_Packages/Linux/RPM/tmpBBroot" $RPM_BUILD_ROOT
 %defattr(-,root,root,-)
 @CMAKE_INSTALL_PREFIX@/include/uca/*.h
 @CMAKE_INSTALL_PREFIX@/@LIB_INSTALL_DIR@/libuca.so
-@CMAKE_INSTALL_PREFIX@/@LIB_INSTALL_DIR@/libuca.so.@UCA_VERSION_MINOR@
-@CMAKE_INSTALL_PREFIX@/@LIB_INSTALL_DIR@/libuca.so.@UCA_ABI_VERSION@
+@CMAKE_INSTALL_PREFIX@/@LIB_INSTALL_DIR@/libuca.so.@UCA_VERSION_MAJOR@
+@CMAKE_INSTALL_PREFIX@/@LIB_INSTALL_DIR@/libuca.so.@UCA_VERSION_MAJOR@.@UCA_VERSION_MINOR@
 @CMAKE_INSTALL_PREFIX@/lib/pkgconfig/uca.pc
 
 
