Start migrating to libuca 1.1 and glib plugins.

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -6,4 +6,5 @@
 #cmakedefine HAVE_DEXELA_CL
 
 #cmakedefine HAVE_MOCK_CAMERA
-#define CONTROL_GLADE_PATH "${CMAKE_INSTALL_PREFIX}/share/libuca/control.glade"
+//#define CONTROL_GLADE_PATH "${CMAKE_INSTALL_PREFIX}/share/libuca/control.glade"
+#define CONTROL_GLADE_PATH "./control.glade"
