--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-CMake*
+CMakeFiles
 *~
 *.cmake
 Makefile
@@ -6,3 +6,7 @@ src/libuca.so*
 test/
 libuca.spec
 src/config.h
+*.rpm
+install_manifest.txt
+_CPack_Packages
+*.orig
