Add configuring of the spec-file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,8 @@ set(UCA_ENUM_HDRS
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/package.sh.in
                ${CMAKE_CURRENT_BINARY_DIR}/package.sh)
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/libuca.spec.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/libuca.spec" @ONLY IMMEDIATE)
 
 
 # --- Common flags ------------------------------------------------------------
