--- a/libuca.spec.in
+++ b/libuca.spec.in
@@ -2,7 +2,7 @@
 Buildroot: @UCA_BUILD_DIR@/_CPack_Packages/Linux/RPM/@CPACK_PACKAGE_FILE_NAME@
 Summary:        Abstract interface for different camera classes and frame grabber devices
 Name:           libuca
-Version:        @VERSION@
+Version:        @PACKAGE_VERSION@
 Release:        @CPACK_PACKAGE_RELEASE@
 License:        unknown
 Group:          unknown
