Build package flags inside package-plugin.sh.in
This will use the information provided by each plugin.

--- a/plugins/package-plugin.sh.in
+++ b/plugins/package-plugin.sh.in
@@ -1,1 +1,4 @@
-cpack -D CPACK_INSTALL_CMAKE_PROJECTS="${CMAKE_CURRENT_BINARY_DIR}/;Project;${UCA_CAMERA_NAME};/" -D CPACK_PACKAGE_FILE_NAME="uca-plugin-${UCA_CAMERA_NAME}-${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}.${UCA_VERSION_PATCH}-${PLUGIN_VERSION}-${PLUGIN_REVISION}" ${PLUGIN_SPECIFIC_FLAGS}
+FILE_NAME_FLAG="-D CPACK_PACKAGE_FILE_NAME=uca-plugin-${UCA_CAMERA_NAME}-${UCA_VERSION_STRING}-${PLUGIN_VERSION}-${PLUGIN_REVISION}"
+PACKAGE_NAME_FLAG="-D CPACK_PACKAGE_NAME=uca-plugin-${UCA_CAMERA_NAME}"
+
+cpack -D CPACK_INSTALL_CMAKE_PROJECTS="${CMAKE_CURRENT_BINARY_DIR}/;Project;${UCA_CAMERA_NAME};/" $FILE_NAME_FLAG $PACKAGE_NAME_FLAG
