--- a/plugins/ufo/CMakeLists.txt
+++ b/plugins/ufo/CMakeLists.txt
@@ -5,6 +5,9 @@ find_package(IPE)
 
 if (IPE_FOUND)
     set(UCA_CAMERA_NAME "ufo")
+    set(PLUGIN_VERSION "1.0.0")
+    set(PLUGIN_REVISION "0")
+    set(PLUGIN_REQUIRES "libuca >= 1.1.0")
 
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../package-plugin.sh.in
                    ${CMAKE_CURRENT_BINARY_DIR}/../../package-plugin-${UCA_CAMERA_NAME}.sh)
