Update package script
Allows to set additional information in each plugin's CMakeLists.txt.

Conflicts:

	plugins/package-plugin.sh.in

--- a/plugins/package-plugin.sh.in
+++ b/plugins/package-plugin.sh.in
@@ -1,4 +1,25 @@
-FILE_NAME_FLAG="-D CPACK_PACKAGE_FILE_NAME=uca-plugin-${UCA_CAMERA_NAME}-${UCA_VERSION_STRING}-${PLUGIN_VERSION}-${PLUGIN_REVISION}"
-PACKAGE_NAME_FLAG="-D CPACK_PACKAGE_NAME=uca-plugin-${UCA_CAMERA_NAME}"
+PACKAGE_CHANGELOG="-D CPACK_RPM_CHANGELOG_FILE=${PLUGIN_CHANGELOG}"
+PACKAGE_FILE_NAME="-D CPACK_PACKAGE_FILE_NAME=uca-plugin-${UCA_CAMERA_NAME}-${UCA_VERSION_STRING}-${PLUGIN_VERSION}-${PLUGIN_REVISION}"
+PACKAGE_NAME="-D CPACK_PACKAGE_NAME=uca-plugin-${UCA_CAMERA_NAME}"
+PACKAGE_DEPENDENCIES="-D CPACK_RPM_PACKAGE_REQUIRES=\"${PLUGIN_REQUIRES}\""
+PACKAGE_DESCRIPTION="-D CPACK_RPM_PACKAGE_DESCRIPTION=\"${PLUGIN_DESCRIPTION}\""
+PACKAGE_RELEASE="-D CPACK_RPM_PACKAGE_RELEASE=${PLUGIN_REVISION}"
+PACKAGE_SUMMARY="-D CPACK_RPM_PACKAGE_SUMMARY=\"${PLUGIN_SUMMARY}\""
+PACKAGE_VENDOR="-D CPACK_RPM_PACKAGE_VENDOR=\"${PLUGIN_VENDOR}\""
+PACKAGE_VERSION="-D CPACK_PACKAGE_VERSION=${PLUGIN_VERSION}"
 
-cpack -D CPACK_INSTALL_CMAKE_PROJECTS="${CMAKE_CURRENT_BINARY_DIR}/;Project;${UCA_CAMERA_NAME};/" $FILE_NAME_FLAG $PACKAGE_NAME_FLAG -D CPACK_RPM_PACKAGE_SUMMARY="${PLUGIN_SUMMARY}" -D CPACK_PACKAGE_VERSION=${PLUGIN_VERSION} -D CPACK_RPM_PACKAGE_RELEASE=${PLUGIN_REVISION} -D CPACK_RPM_CHANGELOG_FILE=${PLUGIN_CHANGELOG} -D CPACK_RPM_PACKAGE_REQUIRES="${PLUGIN_REQUIRES}" -D CPACK_RPM_PACKAGE_DESCRIPTION="${PLUGIN_DESCRIPTION}" -D CPACK_RPM_PACKAGE_VENDOR="${PLUGIN_VENDOR}"
+FLAGS=" \
+       $PACKAGE_CHANGELOG \
+       $PACKAGE_DEPENDENCIES \
+       $PACKAGE_DESCRIPTION \
+       $PACKAGE_FILE_NAME \
+       $PACKAGE_NAME \
+       $PACKAGE_RELEASE \
+       $PACKAGE_SUMMARY \
+       $PACKAGE_VENDOR \
+       $PACKAGE_VERSION \
+       "
+
+cmd="cpack -D CPACK_INSTALL_CMAKE_PROJECTS=\"${CMAKE_CURRENT_BINARY_DIR}/;Project;${UCA_CAMERA_NAME};/\" $FLAGS"
+
+eval $cmd
