--- a/package.sh.in
+++ b/package.sh.in
@@ -1,5 +1,7 @@
-cpack -D CPACK_INSTALL_CMAKE_PROJECTS="${CMAKE_CURRENT_BINARY_DIR}/;Project;libraries;/"
-cpack -D CPACK_INSTALL_CMAKE_PROJECTS="${CMAKE_CURRENT_BINARY_DIR}/;Project;headers;/" -D CPACK_PACKAGE_FILE_NAME="libuca-${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}.${UCA_VERSION_PATCH}-devel"
+HEADERS_POSTFIX="devel"
+
+cpack -D CPACK_INSTALL_CMAKE_PROJECTS="${CMAKE_CURRENT_BINARY_DIR}/;Project;libraries;/" -D CPACK_PACKAGE_VERSION=${UCA_VERSION_STRING}
+cpack -D CPACK_INSTALL_CMAKE_PROJECTS="${CMAKE_CURRENT_BINARY_DIR}/;Project;headers;/" -D CPACK_PACKAGE_NAME="${CPACK_PACKAGE_NAME}-$HEADERS_POSTFIX" -D CPACK_PACKAGE_FILE_NAME="${CPACK_PACKAGE_NAME}-${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}.${UCA_VERSION_PATCH}-$HEADERS_POSTFIX"
 
 # Build packages for all available cameras
 for shell_script in `find -name 'package-plugin-*.sh'`; do
