--- a/plugins/dexela/CMakeLists.txt
+++ b/plugins/dexela/CMakeLists.txt
@@ -1,17 +1,17 @@
 cmake_minimum_required(VERSION 2.6)
 project(ucadexela C)
-set(VERSION "1.0.0")
+set(VERSION "1.0.1")
 
 find_package(DEXELA)
 
 if (DEXELA_FOUND)
     set(UCA_CAMERA_NAME "dexela")
-    set(PLUGIN_REVISION "4")
-    set(PLUGIN_VERSION "1.0.0")
+    set(PLUGIN_REVISION "1")
+    set(PLUGIN_VERSION ${VERSION})
     set(PLUGIN_SUMMARY "Dexela plugin for libuca")
     set(PLUGIN_CHANGELOG "${CMAKE_CURRENT_SOURCE_DIR}/changelog.txt")
     set(PLUGIN_DESCRIPTION "Plugin for the Dexela 1207 detector.")
-    set(PLUGIN_REQUIRES "libuca = 1.1.0, libdexela >= 0.9.2")
+    set(PLUGIN_REQUIRES "libuca = 1.1.0, libdexela >= 1.0.0")
     set(PLUGIN_VENDOR "ANKA Computing Group")
 
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../package-plugin.sh.in
@@ -22,7 +22,7 @@ if (DEXELA_FOUND)
 
     add_library(ucadexela SHARED uca-dexela-camera.c)
 
-    target_link_libraries(ucadexela ${UCA_DEPS}  ${DEXELA_LIBRARIES})
+    target_link_libraries(ucadexela ${UCA_DEPS} ${DEXELA_LIBRARIES})
 
     install(TARGETS ucadexela
             LIBRARY DESTINATION ${UCA_PLUGINDIR}
