--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -10,23 +10,29 @@ pkg_check_modules(GTHREAD2 gthread-2.0)
 pkg_check_modules(GLIB2 glib-2.0>=2.24 REQUIRED)
 pkg_check_modules(GOBJECT2 gobject-2.0>=2.24 REQUIRED)
 
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/control.glade ${CMAKE_CURRENT_BINARY_DIR})
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
+               ${CMAKE_CURRENT_BINARY_DIR}/config.h)
+
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/control.glade
+               ${CMAKE_CURRENT_BINARY_DIR})
 
 # --- Build targets -----------------------------------------------------------
 include_directories(
     ${GLIB2_INCLUDE_DIRS}
     ${GOBJECT2_INCLUDE_DIRS}
-    ${CMAKE_CURRENT_BINARY_DIR}/../../src/
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../src
-    ${CMAKE_CURRENT_SOURCE_DIR}/../
+    ${CMAKE_CURRENT_BINARY_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/../src
+    ${CMAKE_CURRENT_SOURCE_DIR}/../tools
     )
+
+message("include: ${CMAKE_CURRENT_BINARY_DIR}")
 
 if (GTK2_FOUND)
     include_directories(${GTK2_INCLUDE_DIRS})
 
     add_executable(control
         control.c
-        ../ring-buffer.c    # yes this sucks and should be fixed
+        ../tools/ring-buffer.c    # yes this sucks and should be fixed
         egg-property-cell-renderer.c
         egg-property-tree-view.c
         egg-histogram-view.c)
