--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -4,6 +4,7 @@ add_definitions("--std=c99 -Wall")
 
 # --- Find packages and libraries ---------------------------------------------
 find_package(PkgConfig)
+find_package(TIFF)
 
 pkg_check_modules(GLIB2 glib-2.0>=2.24 REQUIRED)
 pkg_check_modules(GOBJECT2 gobject-2.0>=2.24 REQUIRED)
@@ -12,11 +13,21 @@ pkg_check_modules(GOBJECT2 gobject-2.0>=2.24 REQUIRED)
 include_directories(
     ${GLIB2_INCLUDE_DIRS}
     ${GOBJECT2_INCLUDE_DIRS}
-    ${CMAKE_CURRENT_BINARY_DIR}/../src/
+    ${CMAKE_CURRENT_BINARY_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/../src
     )
 
 set(libs uca ${GLIB2_LIBRARIES} ${GOBJECT2_LIBRARIES})
+
+if (TIFF_FOUND)
+    set(HAVE_LIBTIFF "1")
+    list(APPEND libs ${TIFF_LIBRARIES})
+    include_directories(${TIFF_INCLUDE_DIRS})
+endif ()
+
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
+               ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 add_executable(gen-doc gen-doc.c)
 target_link_libraries(gen-doc ${libs})
@@ -32,5 +43,3 @@ target_link_libraries(benchmark ${libs})
 
 add_executable(perf perf-overhead.c)
 target_link_libraries(perf ${libs})
-
-add_subdirectory(gui)
